--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="head">
             <div class="headln"><b>Full-stack Bootcamp</b></div>
             <div class="sheadln">From No Stack To Full Stack</div>
-            <button class="learn">Learn More</button>
+            <button class="button">Learn More</button>
             <img class="scrl" src="arrow.svg">
         </div>
     </header>
