--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
                 </div>
                 <div class="inputs">
                     <p><b>Name</b></p>
-                    <input class="Name" type="text" placeholder="Your Name">
+                    <input class="Name" type="text" placeholder="Your Name Here">
                     <p><b>Email</b></p>
-                    <input class="Email" type="text" placeholder="Your Email">
+                    <input class="Email" type="text" placeholder="Your Email Here">
                     <p><b>Message</b></p>
-                    <textarea class="Message" placeholder="Any Messages"></textarea>
+                    <textarea class="Message" placeholder="Any Messages?write Here"></textarea>
                     <br>
                 <div class="r">
                     <button class="button">Send</button>
